clusters/dev-cluster/components/apps/fleetman-microservices/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman
  namespace: fleetman-microservices
  annotations:
    cert-manager.io/cluster-issuer: mkcert-issuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: upgrade-insecure-requests";
spec:
  ingressClassName: nginx
  rules:
  - host: fleetman.kindcluster.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
  tls:
    - hosts:
      - fleetman.kindcluster.dev
      secretName: fleetman-tls
